<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JsonApp</string>
    <string name="unavailable_download">Невозможно загрузить изображение</string>
    
    <string name="action_settings">Settings</string>
   <string name="Category_ALL">Every Category</string>
    <string name="Category_American_Mosaic">American Mosaic</string>
    <string name="Category_As_It_Is">As It Is</string>
    <string name="Category_Business">Business</string>
    <string name="Category_Health_Report">Health Report</string>
    <string name="Category_In_the_News">In the News</string>
    <string name="Category_Science_Technology">Science Technology</string>
    <string name="Category_Select">Cetarogry Filter</string>
    <string name="Category_The_Making_of_a_Nation">The Making of a Nation</string>
    <string name="Category_World">World</string>
    <string name="DeleteAll">Delete downloaded items</string>
    <string name="DeleteAllMsg">Do you really want to delete all downloaded contents??</string>
    <string name="DownStatusColor">Downloaded item color</string>
    <string name="DownloadAll">Download all</string>
    <string name="DownloadAllMsg">"Do you really want to download all contents? [Cancel : 'Back key' during downloading]"</string>
    <string name="EPISODE_REPEAT_NONE">NONE</string>
    <string name="EPISODE_REPEAT_RANDOM">Repeat(random)</string>
    <string name="EPISODE_REPEAT_SEQUENTIAL">Repeat(sequential)</string>
    <string name="EPISODE_REPEAT_THIS">Repeat(current)</string>
    <string name="FailedToConnection">"Can't connect to network. Please check your network status."</string>
    <string name="ListActionStyle">List Menu Style</string>
    <string name="ListActionStyle1">Long Click</string>
    <string name="ListActionStyle2">Click</string>
    <string name="ListenStatusColor">Listened item color</string>
    <string name="OriginalLink">Original article</string>
    <string name="REAPEAT_ALL_RANDOM_EPISODE">Play random episode after playing this episode.</string>
    <string name="REAPEAT_ALL_SEQUENTIAL_EPISODE">Play episode sequentially after playing this episode.</string>
    <string name="REAPEAT_CURRENT_EPISODE">Repeat this episode.</string>
    <string name="Stop_TIMER_120MIN">2 Hours</string>
    <string name="Stop_TIMER_180MIN">3 Hours</string>
    <string name="Stop_TIMER_30MIN">30 Min</string>
    <string name="Stop_TIMER_60MIN">1 Hour</string>
    <string name="Stop_TIMER_MSG">Player will stop after %s.</string>
    <string name="Stop_TIMER_NONE">No Timer</string>
    <string name="UpdatedHistory">Updated history</string>
    <string name="VisitOriginalLink">Visit the original link</string>
    <string name="about">Information</string>
    <string name="about_desc">Van(van77@hotmail.ru)</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="addfavorite">Add favorite mark to the item.</string>
    <string name="all">ALL</string>
    <string name="autoplay">Auto Play</string>
    <string name="autoplay_desc">Start to play when entering to the player</string>
    <string name="black">Black</string>
    <string name="category">Category</string>
    <string name="close">Close</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color1_title">Color 1</string>
    <string name="color2_summary">"not persistent color
alpha slider added via code"</string>
    <string name="color2_title">Color 2</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color3_title">Color 3</string>
    <string name="color4_summary">color set with HEX code in xml</string>
    <string name="color4_title">Color 4</string>
    <string name="colorDict">ColorDict</string>
    <string name="colordict_requered">"'ColorDict' is required for dictionary mode. Please install 'ColorDict' and 'its dictionary' at market first."</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connecting">Connecting to server..</string>
    <string name="dateformat">yyyy-MM-dd HH:mm</string>
    <string name="daumDict">Daum EngKor Dic</string>
    <string name="daume2eDict">Daum EngEng Dic</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="dict_desc">Show dictionary when clicking a word in the script(Required ColorDict app)</string>
    <string name="dict_mode">Dictionary Mode</string>
    <string name="dictoff">Dict Off</string>
    <string name="dicton">Dict On</string>
    <string name="download">Down</string>
    <string name="download_query">"Do you really want to download '%s'?"</string>
    <string name="downloaded">Down</string>
    <string name="downloading">Downloading</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="etc">ETC</string>
    <string name="failed">Failed to download..</string>
    <string name="favorite">Favorite</string>
    <string name="favoriteShort">Favor</string>
    <string name="getlist">Downloading VOA Podcast list from server</string>
    <string name="hello">Hello World, NewQA!</string>
    <string name="listfailed">Failed to update VOA Podcast list</string>
    <string name="listsuccessed">Updated VOA Podcast list</string>
    <string name="listtheme">Theme</string>
    <string name="mainscreen">Main Screen</string>
    <string name="naverDict">Naver EngKor Dic</string>
    <string name="next10">+10s</string>
    <string name="next30">+30s</string>
    <string name="no">No</string>
    <string name="noaudio">No Audio item</string>
    <string name="nospacefailed">No space left on device</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="pausing">Pausing</string>
    <string name="play">Play</string>
    <string name="player">Player</string>
    <string name="playing">Playing</string>
    <string name="pref_category">Category</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="prev10">-10s</string>
    <string name="prev30">-30s</string>
    <string name="ratethisapp">Rate this app</string>
    <string name="ratethisapp_desc">Thank you :)</string>
    <string name="read">Read</string>
    <string name="remove">Delete</string>
    <string name="remove_query">"Do you really want to delete '%s'?"</string>
    <string name="removefavorite">Remove favorite mark from the item.</string>
    <string name="repeat">Repeat</string>
    <string name="resumefromprevious">Resume</string>
    <string name="resumefromprevious_desc">Move to the previous position when starting to play.</string>
    <string name="resuming">Download resuming..</string>
    <string name="script_font">Script font size</string>
    <string name="script_font_desc">Change font size for script displayed in player</string>
    <string name="script_font_larger">Larger</string>
    <string name="script_font_largest">Largest</string>
    <string name="script_font_normal">Normal</string>
    <string name="script_font_smaller">Smaller</string>
    <string name="script_font_smallest">Smallest</string>
    <string name="scripttheme">Script Theme</string>
    <string name="selDictionary">Dictionary (Experimental)</string>
    <string name="send_email">Send Email</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="successed">Completed to download..</string>
    <string name="summarydetail">Summary Detail</string>
    <string name="summarydetail_desc">Display the detailed summary on the main list screen</string>
    <string name="update">Update</string>
    <string name="updatedetail">"- Increase the thumbnail image quality
- Add a menu to delete all downloaded items
- Adjust default font size in the player
- Adjust some layout"</string>
    <string name="updateinfo">Updated</string>
    <string name="vdictE2VDict">VDict(Eng->Vietnamese)</string>
    <string name="visitvoapodcom">Visit voanews.com</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="webDic">Web Dictionary</string>
    <string name="white">White</string>
    <string name="yahooE2JDict">Yahoo Eng->Jap Dict</string>
    <string name="yes">Yes</string>
</resources>
