<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/mainplayer" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/abs__search_dropdown_dark" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.0">
                <ToggleButton android:textAppearance="?android:textAppearanceSmall" android:layout_gravity="center_vertical" android:id="@id/checkBoxDcitOn" android:layout_width="fill_parent" android:layout_height="0.0dip" android:checked="true" android:textOn="@string/dicton" android:textOff="@string/dictoff" android:layout_weight="4.0" />
                <ImageButton android:layout_gravity="center_vertical" android:id="@id/button1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/play" android:layout_weight="6.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="8.0">
                <RelativeLayout android:layout_gravity="center_vertical" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <SeekBar android:layout_gravity="center_vertical" android:id="@id/seekBar1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="10.0dip" android:layout_below="@id/currentTime" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/currentTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--:--" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/durationTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="--:--" android:layout_alignParentRight="true" />
                </RelativeLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:background="@drawable/abs__search_dropdown_dark" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <Button android:textSize="12.0sp" android:layout_gravity="center_vertical" android:id="@id/prev30" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/prev30" android:layout_weight="1.0" />
                        <Button android:textSize="12.0sp" android:layout_gravity="center_vertical" android:id="@id/prev10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/prev10" android:layout_weight="1.0" />
                        <Button android:textSize="12.0sp" android:layout_gravity="center_vertical" android:id="@id/next10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/next10" android:layout_weight="1.0" />
                        <Button android:textSize="12.0sp" android:layout_gravity="center_vertical" android:id="@id/next30" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/next30" android:layout_weight="1.0" />
                        <ImageButton android:layout_gravity="bottom" android:id="@id/toogle_extraControl" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/arrow_up" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/extraControl" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageButton android:id="@id/buttonABRepeat" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_media_ab" android:scaleType="centerCrop" /> />
<ImageButton android:id="@id/buttonRepeat" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_media_repeat" android:scaleType="centerCrop" />
            <ImageButton android:id="@id/buttonStopTimer" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_timer" android:scaleType="centerCrop" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_gravity="center_vertical" android:id="@id/textSpeed" android:paddingLeft="15.0dip" android:paddingRight="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1.0x" />
            <SeekBar android:layout_gravity="center_vertical" android:id="@id/seekBarSpeed" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:longClickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="8.0dip" android:max="1" android:progress="0" android:indeterminateOnly="false" android:thumb="@drawable/thumb_image" android:thumbOffset="2.0dip" />
        </LinearLayout>
    </LinearLayout>
    <WebView android:id="@id/webView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:id="@id/webDic" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.2">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/abs__search_dropdown_dark" android:layout_width="fill_parent" android:layout_height="30.0dip">
            <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/webDic" android:layout_weight="8.0" />
            <ImageView android:id="@id/closeDicBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_close_normal" />
        </LinearLayout>
        <WebView android:id="@id/webDicView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
</LinearLayout>